[package]
name = "app"
version = "0.1.0"
authors = ["kanghua <kanghua151@msn.com>"]
edition = "2018"

# makes `cargo check --all-targets` work
[[bin]]
name = "app"
bench = false
doctest = false
test = false

[dependencies]
microbit-v2 = "0.12.0"
#my-board = { path = "../board" }
#cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
#cortex-m-rtic = "0.5.6"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
heapless = "0.6.1"
messages = { path = "../../messages" }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
postcard = "0.5.2"


[features]
default = ['defmt-default']
# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
