[package]
name = "self-tests"
version = "0.1.0"
authors = ["kanghua <kanghua151@msn.com>"]
edition = "2018"
publish = false


[[test]]
name = "s90"
harness = false
[[test]]
name = "s90_driver"
harness = false
[[test]]
name = "animate"
harness = false
[[test]]
name = "animate2"
harness = false

[dev-dependencies]
s90 = { path = "../s90" }
animate = { path = "../animate"}

microbit-v2 = "0.12.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.3"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

libm = "0.2.6"

[features]
default = ['defmt-trace']
# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
