[package]
name = "self-tests"
version = "0.1.0"
authors = ["kanghua <kanghua151@msn.com>"]
edition = "2018"
publish = false


[[test]]
path = "tests/pwm/s90_no_driver.rs"
name = "pwm_s90_no_driver"
harness = false
[[test]]
path = 'tests/pwm/s90_driver.rs'
name = "pwm_s90_driver"
harness = false
[[test]]
path = "tests/pca9685/pca9685_driver.rs"
name = "pca9685_driver"
harness = false
[[test]]
path = "tests/pca9685/lu9685_no_driver.rs"
name = "lu9685_no_driver"
harness = false

[[test]]
name = "myboard"
harness = false

[[test]]
name = "animate"
harness = false
[[test]]
name = "animate_with_option"
harness = false


[dev-dependencies]
s90 = { path = "../s90" }
animate = { path = "../animate"}
my-board = { path = "../board" }

#pwm-pca9685 = "0.3.0"

microbit-v2 = "0.13.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.7"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

libm = "0.2.6"

[dependencies.pwm-pca9685]
git = "https://github.com/kanghua309/pwm-pca9685-rs"
rev = "b6940de"

#[dependencies.microbit-v2]
#git = "https://github.com/kanghua309/microbit.git"
#rev = "533ac44"

[features]
default = ['defmt-trace']
# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
