[package]
name = "animate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s90 = { path = "../s90" }
microbit-v2 = "0.12.0"

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"

embedded-hal = "0.2.3"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }


heapless = "0.5.4"

#
#libm = "0.2.6"