[package]
name = "animate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
s90 = { path = "../s90" }
defmt = "0.3.0"

#panic-probe = { version = "0.3.0", features = ["print-defmt"] }
defmt-rtt = { version = "0.4", optional = false }

#panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
#panic-reset = { version = "0.1.1", optional = true }
#static_cell = "1"

#drogue-device = { version = "0.1.0", path = "../deps/device", default-features = false, features = ["time", "ble+softdevice"] }
#microbit-bsp = { version = "0.1.0", path = "../deps/boards/microbit" }

#embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "gpiote", "time-driver-rtc1", "nightly", "unstable-traits"]}
#embassy-boot-nrf = { version = "0.1.0", default-features = false, features = ["softdevice"] }
#embassy-executor = { version = "0.1.1", default-features = false, features = ["integrated-timers", "nightly","defmt"] }
embassy-time = { version = "0.1.0", features = ["nightly", "defmt", "defmt-timestamp-uptime"]}
#embassy-sync = { version = "0.1.0", default-features = false }
#embassy-futures = { version = "0.1.0", default-features = false }

#embedded-io = "0.3.0"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
##cortex-m = { version = "0.7.0" }
#
#cortex-m-rt = "0.7"
heapless = "0.5.4"
futures     = { version = "0.3.17", default-features = false, features = ["async-await"] }
#nrf-softdevice = { version = "0.1.0", features = ["defmt", "ble-peripheral", "ble-gatt-server", "s140", "nrf52833", "critical-section-impl"] }
#nrf-softdevice-s140 = { version = "0.1.1" }

#fixed = "1.2.0"
#atomic-pool = "1.0.0"

#rand = { version = "0.8.4", default-features = false }
#embedded-storage = "0.3.0"
#usbd-hid = "0.5.2"
#serde = { version = "1.0.136", default-features = false }

embedded-hal = { version = "0.2.7" , features = ["unproven"]}

#embedded-hal-mock = "0.7.2"
#embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
#embedded-hal-1 =  { package = "embedded-hal", version = "=1.0.0-alpha.9", optional = false}
embedded-hal-async = { version = "=0.2.0-alpha.0", optional = false}

#
##libm = "0.2.6"
#[patch.crates-io]
#embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
#embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
#embassy-lora = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
#embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
#embassy-hal-common = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
##embassy-boot = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
##embassy-boot-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
###nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "b71e18bc76d5704614d3eef27f3ce8e8c1f477d4" }
##nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git"}
##
##nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "b71e18bc76d5704614d3eef27f3ce8e8c1f477d4" }
###nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git" }
##nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "b71e18bc76d5704614d3eef27f3ce8e8c1f477d4" }
###nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice.git"}
#
#embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
#embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }