[package]
authors = ["kanghua <kanghua151@msn.com>"]
edition = "2021"
name = "async-app-demo"
version = "0.1.0"

[workspace]

[dependencies]
defmt = { version = "0.3" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }
static_cell = "1"

#drogue-device = { version = "0.1.0", path = "../deps/device", default-features = false, features = ["time", "ble+softdevice"] }
#microbit-bsp = { version = "0.1.0", path = "../deps/boards/microbit" }

embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "gpiote", "time-driver-rtc1", "nightly", "unstable-traits"]}
embassy-boot-nrf = { version = "0.1.0", default-features = false, features = ["softdevice"] }
embassy-executor = { version = "0.1.1", default-features = false, features = ["integrated-timers", "nightly","defmt"] }
embassy-time = { version = "0.1.0", features = ["nightly", "defmt", "defmt-timestamp-uptime","unstable-traits"]}
embassy-sync = { version = "0.1.0", default-features = false }
embassy-futures = { version = "0.1.0", default-features = false }

embedded-io = "0.3.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
#cortex-m = { version = "0.7.0" }

cortex-m-rt = "0.7"
heapless = "0.7"
futures     = { version = "0.3.17", default-features = false, features = ["async-await"] }
nrf-softdevice = { version = "0.1.0", features = ["defmt", "ble-peripheral", "ble-gatt-server", "s140", "nrf52833", "critical-section-impl"] }
nrf-softdevice-s140 = { version = "0.1.1" }
defmt-rtt = { version = "0.4", optional = true }

fixed = "1.2.0"
atomic-pool = "1.0.0"

rand = { version = "0.8.4", default-features = false }
embedded-storage = "0.3.0"
usbd-hid = "0.5.2"
serde = { version = "1.0.136", default-features = false }

#################################
s90 = { path = "../s90" }
animate = { path = "../animate" }

microbit-v2 = "0.12.0"


[features]
default = [
    #"panic-reset",
]
debug = [
    "panic-probe",
    #"drogue-device/defmt",
    "nrf-softdevice/defmt",
    "embassy-executor/defmt",
    "embassy-boot-nrf/defmt",
    "defmt-rtt",
]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = 2
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = 2
debug-assertions = false
opt-level = 0
overflow-checks = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
embassy-lora = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
embassy-boot = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
embassy-boot-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
#nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "b71e18bc76d5704614d3eef27f3ce8e8c1f477d4" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = '79991921dafde25119cc52bbb9d20bbf98d4f4f2'}

nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "b71e18bc76d5704614d3eef27f3ce8e8c1f477d4" }
#nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git" }
nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "b71e18bc76d5704614d3eef27f3ce8e8c1f477d4" }
#nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice.git"}

embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057" }

#embassy-executor = { path = "../../../../../../embassy/embassy" }
#embassy-nrf = { path = "../../../../../../embassy/embassy-nrf" }
#embassy-boot = { path = "../../../../../../embassy/embassy-boot/boot" }
#embassy-boot-nrf = { path = "../../../../../../embassy/embassy-boot/nrf" }
[[bin]]
name = "twin"
#required-features = [""]

[[bin]]
name = "pwm"

[[bin]]
name = "ble"

[[bin]]
name = "test_pwm_s90"

[[bin]]
name = "test_i2c_s90"

[[bin]]
name = "test_animate"