[package]
name = "s90"
version = "0.1.0"
authors = ["kanghua <kanghua151@msn.com>"]
edition = "2018"

[workspace]

[dependencies]
embedded-hal = "0.2.4"
crc-any = { version = "2.3.5", default-features = false }
defmt = "0.3.0"
defmt-rtt = "0.3.0"
#embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
#embedded-hal-1 =  { package = "embedded-hal", version = "=1.0.0-alpha.9", optional = false}
#embedded-hal-async = { version = "=0.2.0-alpha.0", optional = false}
embedded-hal-1 =  { package = "embedded-hal", version = "=1.0.0-alpha.9", optional = false}
embedded-hal-async = { version = "=0.2.0-alpha.0", optional = false}

[dev-dependencies]
embedded-hal-mock = "0.7.2"
#embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
embedded-hal-1 =  { package = "embedded-hal", version = "=1.0.0-alpha.9", optional = false}
embedded-hal-async = { version = "=0.2.0-alpha.0", optional = false}
