[package]
name = "s90"
version = "0.1.0"
authors = ["kanghua <kanghua151@msn.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.4"
crc-any = { version = "2.3.5", default-features = false }
defmt = "0.3.0"
defmt-rtt = "0.3.0"
embedded-hal = { version = "0.2.7" , features = ["unproven"]}

[dev-dependencies]
embedded-hal-mock = "0.7.2"
embedded-hal = { version = "0.2.7" , features = ["unproven"]}

